--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ output: html_document
 
 In 2014, Vietnam was under a big measles outbreak which led to more than 15,033 confirmed case [(Data from National Institute of Hygiene and Epidemiology)](www.nihe.org.vn) and 146 fatalites national wide [[1]](http://wwwnc.cdc.gov/eid/article/22/4/15-1595_article). Most of severe cases who required hospitalization were unvaccinated children. In order to investigate the measles outbreak, we conducted serological experiment to observe the immunity status in the population of four cities which has more than one million population. In additon, by seeing the vaccine coverage of the population, the reason why measles outbreak could spread uncontrolable can be answered. 
 
-This shiny application is a supplemental data to support our study, you can access by following this [link](http://oucru-nihe.ddns.net:3838/). It demonstrates the vaccine coverage from 2000 to 2014 with the population information and this README file helps you build up a similar shiny app. If you have any question, please email to **[me]((mailto:tung.trson@gmail.com)**. **ALL DATA USED IN THIS SHINY ARE BELONG TO the Epidemiology department of National Institute of Hygiene and Epidemiology and Oxford University Clinical Research Unit - Hanoi. 
+This shiny application is a supplemental data to support our study, you can access by following this [link](http://oucru-nihe.ddns.net:3838/). It demonstrates the vaccine coverage from 2000 to 2014 with the population information and this README file helps you build up a similar shiny app. If you have any question, please email to **[me](mailto:tung.trson@gmail.com)**. **ALL DATA USED IN THIS SHINY ARE BELONG TO the Epidemiology department of National Institute of Hygiene and Epidemiology and Oxford University Clinical Research Unit - Hanoi. 
 © Oxford University Clinical Research Unit - Hanoi and National Institute of Hygiene and Epidemiology
 
 #**Package Usage**
